--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=4eb82d14818f8a452fce",
+    "/css/app.css": "/css/app.css?id=2bdce5636a4c416bcb42"
 }
